--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Votes#index</h1>
-<%= form_tag "/votes", method: "post" do %>
+<%= form_tag "/", method: "post" do %>
   <input type="text" name="vote" />
   <input type="submit" value="Proposer un vote" />
 <% end %>
 <% @votes.each do |vote| %>
-  <p><%= vote.quest %> <%= vote.for %> <%= vote.against %></p>
+  <p><a href="/votes/<%= vote.id %>"><%= vote.id %> <%= vote.quest %> <%= vote.for %> <%= vote.against %></a></p>
 <% end %>
