--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= @vote.quest %></h1>
-<%= @vote.for %> yes 
-<%= @vote.against %> no
-<%= button_to "+1", "/for/" + @vote.id.to_s, class: 'vote', method: :put, remote: true %>
-<%= button_to "-1", "/against/" + @vote.id.to_s, class: 'vote', method: :put, remote: true %>
+<%= form_tag "/votes/" + @vote.id.to_s, method: :post do %>
+  <button name="vote" value=0><%= @vote.vote[0] %> yes</button>
+  <button name="vote" value=1><%= @vote.vote[1] %> no</button>
+<% end %>
 <% @votelogs.each do |votelog| %>
-<p> <%= votelog.vote %> </p>
+<p> <%= User.find(votelog.user_id).name %> <%= votelog.vote %> </p>
 <% end %>
