--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,19 @@
 * {
 	font-family: "Roboto Condensed",sans-serif;
 }
+
+.alert {
+	float: right;
+	margin: 0.5em;
+}
+
+.dm-form {
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 1em;
+	padding-left: 1em;
+	padding-top: 1em;
+	padding-right: 1em;
+	padding-bottom: 1em;
+	width: 500px;
+}
