--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -1,9 +1,20 @@
-<%= form_tag "/register", method: :post do %>
-  <input type="text" name="name" />
-  <input type="password" name="passwd" />
-  <input type="password" name="repeat" />
-  <input type="submit" value="S'inscrire" />
-<% end %>
+<div class="border rounded dm-form">
+	<%= form_tag "/register", method: :post do %>
+		<div class="form-group">
+			<label for="exampleInputEmail1">Username</label>
+			<input class="form-control" type="text" name="name" placeholder="Username"/>
+		</div>
+		<div class="form-group">
+			<label for="exampleInputEmail1">Password</label>
+			<input class="form-control" type="password" name="passwd" placeholder="Password"/>
+		</div>
+		<div class="form-group">
+			<label for="exampleInputEmail1">Confirmation</label>
+			<input class="form-control" type="password" name="repeat" placeholder="Password"/>
+		</div>
+	  <input class="btn btn-primary w-100" type="submit" value="Sign up"/>
+	<% end %>
+</div>
 <% @users.each do |user| %>
   <p> <%= user.name %> </p>
 <% end %>
