--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -1,4 +1,5 @@
 <div class="border rounded dm-form">
+	<h1 class="text-center" >Register</h1>
 	<%= form_tag "/register", method: :post do %>
 		<div class="form-group">
 			<label for="exampleInputEmail1">Username</label>
