--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -1,15 +1,17 @@
 <h1><%= @vote.quest %></h1>
+<p> <%= @vote.published %> </p>
 <%= form_tag "/votes/" + @vote.id.to_s, method: :post do %>
   <% i = 0 %>
   <% @choices.each do |choice| %>
     <% if @current_votelog and @current_votelog.vote == i %>
-      <button class="btn btn-primary dm-btn-chc" name="vote" value=<%= i %>><%= choice.number %> <%= choice.text %></button>
+      <button class="btn btn-primary dm-btn-chc" name="vote" value=<%= i %>><%= choice.vote_count %> <%= choice.text %></button>
     <% else %>
-      <button class="btn btn-secondary dm-btn-chc" name="vote" value=<%= i %>><%= choice.number %> <%= choice.text %></button>
+      <button class="btn btn-secondary dm-btn-chc" name="vote" value=<%= i %>><%= choice.vote_count %> <%= choice.text %></button>
     <% end %>
     <% i = i + 1 %>
   <% end %>
 <% end %>
+<p> <%= @vote.description %> </p>
 <% @votelogs.each do |votelog| %>
-<p> <%= User.find(votelog.user_id).name %> <%= votelog.vote %> </p>
+<p> <%= User.find(votelog.user_id).voter_hash %> <%= votelog.vote %> </p>
 <% end %>
