--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -24,5 +24,5 @@
 <% end %>
 <p> <%= @vote.description %> </p>
 <% @votelogs.each do |votelog| %>
-<p> <%= User.find(votelog.user_id).voter_hash %> <%= votelog.vote %> </p>
+<p> <%= votelog.voter_hash %> <%= votelog.vote %> </p>
 <% end %>
