--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -1,28 +1,47 @@
 <% if @vote.isend? %>
-  <div class="alert alert-primary" role="alert">
-    <% if @vote.status == 1 %>
-      This vote is finished. `<%= Choice.find(@vote.winner).text %>` have win.
-    <% elsif @vote.status == 2 %>
-      Not enought people have vote.
-    <% elsif @vote.status == 3 %>
-      More than one choices have win.
-    <% end %>
-  </div>
+	<div class="alert alert-primary" role="alert">
+		<% if @vote.status == 1 %>
+			This vote is finished. `<%= Choice.find(@vote.winner).text %>` have win.
+		<% elsif @vote.status == 2 %>
+			Not enought people have vote.
+		<% elsif @vote.status == 3 %>
+			More than one choices have win.
+		<% end %>
+	</div>
 <% end %>
-<h1><%= @vote.quest %></h1>
-<p> <%= @vote.published %> </p>
-<%= form_tag "/votes/" + @vote.id.to_s, method: :post do %>
-  <% i = 0 %>
-  <% @choices.each do |choice| %>
-    <% if @current_votelog and @current_votelog.vote == i %>
-      <button class="btn btn-primary dm-btn-chc" name="vote" value=<%= i %>><%= choice.vote_count %> <%= choice.text %></button>
-    <% else %>
-      <button class="btn btn-secondary dm-btn-chc" name="vote" value=<%= i %>><%= choice.vote_count %> <%= choice.text %></button>
-    <% end %>
-    <% i = i + 1 %>
-  <% end %>
-<% end %>
-<p> <%= @vote.description %> </p>
-<% @votelogs.each do |votelog| %>
-<p> <%= votelog.voter_hash %> <%= votelog.vote %> </p>
-<% end %>
+<div class="content">
+	<h1><%= @vote.quest %></h1>
+	<p> <%= @vote.published %> </p>
+	<%= form_tag "/votes/" + @vote.id.to_s, method: :post do %>
+		<% i = 0 %>
+		<% @choices.each do |choice| %>
+		<% if @current_votelog and @current_votelog.vote == i %>
+			<button class="button is-primary is-medium" name="vote" value=<%= i %>><%= choice.vote_count %> <%= choice.text %></button>
+		<% else %>
+			<button class="button is-medium" name="vote" value=<%= i %>><%= choice.vote_count %> <%= choice.text %></button>
+		<% end %>
+		<% i = i + 1 %>
+		<% end %>
+	<% end %>
+	<p> <%= @vote.description %> </p>
+	<table>
+	<thead>
+		<tr>
+			<th>Voter Hash</th>
+			<th>Vote</th>
+		</tr>
+	</thead>
+	<tbody>
+	<% @votelogs.each do |votelog| %>
+		<tr>
+			<td><%= votelog.voter_hash %></td>
+			<th>
+				<% if votelog.vote != -1 %>
+					<%= @choices[votelog.vote].text %>
+				<% end %>
+			</td>
+		</tr>
+	<% end %>
+	</tbody>
+	</table>
+</div>
