--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,3 +37,20 @@
 .dm-btn-chc {
 	width: 100px;
 }
+
+.mobile-buttons {
+ display:none;
+}
+
+@media only screen and (max-width: 1023px) {
+ .mobile-buttons {
+  display:block;
+  position:absolute;
+  right:50px;
+  top:0px
+ }
+}
+
+.dm-form-h1 {
+	text-align: center;
+}
