--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,14 +1,28 @@
-<div class="border rounded dm-form">
-	<h1 class="text-center" >Login</h1>
+<div class="box dm-form">
+	<div class="content is-little">
+		<h1 class="dm-form-h1"> Login</h1>
+	</div>
 	<%= form_tag "/login", method: :post do %>
-		<div class="form-group">
-			<label for="exampleInputEmail1">Username</label>
-			<input class="form-control" type="text" name="name" placeholder="Username"/>
+		<div class="field">
+			<label class="label">Username</label>
+			<p class="control has-icons-left has-icons-right">
+				<input class="input" type="name" name="name" placeholder="Username">
+				<span class="icon is-small is-left">
+					<i class="fas fa-envelope"></i>
+				</span>
+			</p>
 		</div>
-		<div class="form-group">
-			<label for="exampleInputEmail1">Password</label>
-			<input class="form-control" type="password" name="passwd" placeholder="Password"/>
+		<div class="field">
+			<label class="label">Password</label>
+			<p class="control has-icons-left">
+				<input class="input" type="passwd" name="passwd"placeholder="Password">
+				<span class="icon is-small is-left">
+					<i class="fas fa-lock"></i>
+				</span>
+			</p>
 		</div>
-		<button class="btn btn-primary w-100" type="submit"> Sign in </button>
+		<div class="field">
+			<button class="button is-success is-fullwidth" type="submit"> Login </button>
+		</div>
 	<% end %>
 </div>
