--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -1,19 +1,38 @@
-<div class="border rounded dm-form">
-	<h1 class="text-center" >Register</h1>
+<div class="box dm-form">
+	<div class="content is-little">
+		<h1 class="dm-form-h1"> Register </h1>
+	</div>
 	<%= form_tag "/register", method: :post do %>
-		<div class="form-group">
-			<label for="exampleInputEmail1">Username</label>
-			<input class="form-control" type="text" name="name" placeholder="Username"/>
-		</div>
-		<div class="form-group">
-			<label for="exampleInputEmail1">Password</label>
-			<input class="form-control" type="password" name="passwd" placeholder="Password"/>
-		</div>
-		<div class="form-group">
-			<label for="exampleInputEmail1">Confirmation</label>
-			<input class="form-control" type="password" name="repeat" placeholder="Password"/>
-		</div>
-	  <input class="btn btn-primary w-100" type="submit" value="Sign up"/>
+	<div class="field">
+		<label class="label">Username</label>
+		<p class="control has-icons-left has-icons-right">
+		<input class="input" type="name" name="name" placeholder="Username">
+		<span class="icon is-small is-left">
+			<i class="fas fa-envelope"></i>
+		</span>
+		</p>
+	</div>
+	<div class="field">
+		<label class="label">Password</label>
+		<p class="control has-icons-left">
+			<input class="input" type="password" name="passwd" placeholder="Password">
+			<span class="icon is-small is-left">
+				<i class="fas fa-lock"></i>
+			</span>
+		</p>
+	</div>
+	<div class="field">
+		<label class="label">Password</label>
+		<p class="control has-icons-left">
+			<input class="input" type="password" name="repeat" placeholder="Password">
+			<span class="icon is-small is-left">
+				<i class="fas fa-lock"></i>
+			</span>
+		</p>
+	</div>
+	<div class="field">
+		<button class="button is-success is-fullwidth" type="submit"> Register </button>
+	</div>
 	<% end %>
 </div>
 <% @users.each do |user| %>
