Add: lib Instance

--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -1,7 +1,7 @@
 <% if @vote.isend? %>
 	<div class="notification is-info">
 		<% if @vote.status == 1 %>
-			This vote is finished. `<%= Choice.find(@vote.winner).text %>` have win.
+			This vote is finished. `<%= Choice.find(@vote.id).text %>` have win.
 		<% elsif @vote.status == 2 %>
 			Not enought people have vote.
 		<% elsif @vote.status == 3 %>
