Add: creation of vote form

--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,8 +1,4 @@
-<h1>Votes#index</h1>
-<%= form_tag "/", method: "post" do %>
-	<input type="text" name="vote"/>
-	<input type="submit" value="Proposer un vote"/>
-<% end %>
+<a href="/createvote">Create vote</a>
 <div class="content">
 	<table>
 		<thead>
