--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
 		<%= csrf_meta_tags %>
 		<%= csp_meta_tag %>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+		<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 		<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 		<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 	</head>
@@ -34,19 +34,26 @@
 			<a class="navbar-item" href="/votes"> Vote </a>
 		</div>
 		<div class="navbar-end">
-			<div class="navbar-item">
-		<% if @current_user %>
-			<p> <%= @current_user.name %> <p>
-			<div class="buttons">
-				<a class="button is-primary" href="/disconnect"> disconnect </a>
+			<% if @current_user %>
+			<div class="navbar-item buttons dm-navbar-buttons">
+				<a class="button is-light" href="/createvote"> + </a>
 			</div>
-		<% else %>
-			<div class="buttons">
+			<div class="navbar-item has-dropdown">
+				<a class="navbar-link button">
+					<%= @current_user.name %>
+				</a>
+				<div class="navbar-dropdown is-right">
+					<a class="navbar-item" href="/disconnect">
+						Log out
+					</a>
+				</div>
+			</div>
+			<% else %>
+			<div class="navbar-item buttons">
 				<a class="button is-light" href="/login"> Sign in </a>
 				<a class="button is-primary" href="/register"> <strong>Sign up</strong> </a>
 			</div>
-		<% end %>
-			</div>
+			<% end %>
 		</div>
 	</div>
 </nav>
