--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -15,7 +15,7 @@
 		<div class="field">
 			<label class="label">Password</label>
 			<p class="control has-icons-left">
-				<input class="input" type="passwd" name="passwd"placeholder="Password">
+				<input class="input" type="password" name="passwd"placeholder="Password">
 				<span class="icon is-small is-left">
 					<i class="fas fa-lock"></i>
 				</span>
