--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 		<%= csrf_meta_tags %>
 		<%= csp_meta_tag %>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
 		<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 		<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 		<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -57,8 +57,8 @@
 		</div>
 	</div>
 </nav>
-		<% if flash[:success] %> <div class="notification is-success dm-alert"> <%= flash[:success] %> </div> <% end %>
-		<% if flash[:fail] %> <div class="notification is-danger dm-alert"> <%= flash[:fail] %> </div> <% end %>
+		<% if flash[:success] %> <div class="notification is-success dm-alert"> <button class="delete"></button> <%= flash[:success] %> </div> <% end %>
+		<% if flash[:fail] %> <div class="notification is-danger dm-alert"> <button class="delete"></button> <%= flash[:fail] %> </div> <% end %>
 		<%= yield %>
 	</body>
 </html>
