--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -23,7 +23,7 @@
 		<% i = i + 1 %>
 		<% end %>
 	<% end %>
-	<p> <%= @vote.description %> </p>
+	<text> <%= @vote.description %> </text>
 	<table>
 	<thead>
 		<tr>
